# llvm-practice

elf-parser/: .gitignore  CMakeLists.txt  maps.txt
elf-parser/include/: lib.hpp  parser.hpp
elf-parser/src/: lib.cpp  main.cpp  parser.cpp  stringLib.cpp  test.cpp
elf-parser/test/pic/: Graph.txt  maps.txt  test_binary
llvm/include/llvm/Transforms/Utils/: CallGraph.h
llvm/lib/Passes/: PassBuilderPipelines.cpp
llvm/lib/Transforms/CallGraph/: CMakeLists.txt
llvm/lib/Transforms/CallGraph/Logger/: Logger.cpp  Logger.ll
llvm/lib/Transforms/CallGraph/test/: 1.cpp  2  CMakeLists.txt  DOT_STANDART_1.dot  GRAPH_1.txt  Graph.txt  IR_1.ll  Logger.ll  MAPS_STANDART_1.txt  dump.dot  dump.txt  maps.txt  test_1.cpp
llvm/lib/Transforms/Utils/: CMakeLists.txt  CallGraph.cpp
llvm/lib/Transforms/Utils/CallGraphLogger/Logger/: Logger.ll
